# ultimus

./: (0.028, 4.073).csv  (0.028, 5.649).csv  (0.029, 5.649).csv  (0.03123, 16.772).csv  (0.03123, 4.073).csv  (0.03123, 5.649).csv  (0.03123, 7.918).csv  (0.033, 5.649).csv  (0.033, 7.918).csv  (0.036, 4.073).csv  (0.036, 5.649).csv  (0.036, 7.918).csv  (0.0385, 16.772).csv  (0.0385, 4.073).csv  (0.0416, 16.772).csv  (0.0416, 5.649).csv  (0.0416, 7.918).csv  (0.04545, 16.772).csv  (0.04545, 4.073).csv  (0.04545, 7.918).csv  (0.05, 4.073).csv  (0.05, 5.649).csv  (0.05, 7.918).csv  .gitignore  100000_data.csv  100000_data1.3.csv  100000_data1.6.csv  100000_data41-1.csv  100000_data5.csv  100000_data_pow_2.csv  10000_random_phase1_results_20.csv  10000_random_phase1_results_22.csv  10000_random_phase1_results_24.csv  10000_random_phase1_results_26.csv  10000_random_phase1_results_28.csv  10000_random_phase1_results_30.csv  10000_random_phase1_results_32.csv  10000_random_phase1_results_34.csv  10000_random_phase1_results_36.csv  10000_random_phase1_results_38.csv  (+350 more)
.claude/: settings.local.json
10000_random_data/: inter_arrival_20.csv  inter_arrival_22.csv  inter_arrival_24.csv  inter_arrival_26.csv  inter_arrival_28.csv  inter_arrival_30.csv  inter_arrival_32.csv  inter_arrival_34.csv  inter_arrival_36.csv  inter_arrival_38.csv  inter_arrival_40.csv
10000_random_result/: all_result_10000.csv  result_1.csv  result_128.csv  result_16.csv  result_256.csv  result_32.csv  result_4.csv  result_64.csv
1000_random_data/: inter_arrival_20.csv  inter_arrival_22.csv  inter_arrival_24.csv  inter_arrival_26.csv  inter_arrival_28.csv  inter_arrival_30.csv  inter_arrival_32.csv  inter_arrival_34.csv  inter_arrival_36.csv  inter_arrival_38.csv  inter_arrival_40.csv
1000_random_result/: all_result_1000.csv  result_1.csv  result_128.csv  result_16.csv  result_256.csv  result_32.csv  result_4.csv  result_64.csv
100_random_data/: inter_arrival_20.csv  inter_arrival_22.csv  inter_arrival_24.csv  inter_arrival_26.csv  inter_arrival_28.csv  inter_arrival_30.csv  inter_arrival_32.csv  inter_arrival_34.csv  inter_arrival_36.csv  inter_arrival_38.csv  inter_arrival_40.csv
100_random_result/: all_result_100.csv  result_1.csv  result_128.csv  result_16.csv  result_256.csv  result_32.csv  result_4.csv  result_64.csv
1_random_data/: inter_arrival_20.csv  inter_arrival_22.csv  inter_arrival_24.csv  inter_arrival_26.csv  inter_arrival_28.csv  inter_arrival_30.csv  inter_arrival_32.csv  inter_arrival_34.csv  inter_arrival_36.csv  inter_arrival_38.csv  inter_arrival_40.csv
1_random_result/: all_result_1.csv  result_1.csv  result_128.csv  result_16.csv  result_2.csv  result_256.csv  result_30.csv  result_32.csv  result_4.csv  result_64.csv  result_8.csv
2000_random_data/: inter_arrival_20.csv  inter_arrival_22.csv  inter_arrival_24.csv  inter_arrival_26.csv  inter_arrival_28.csv  inter_arrival_30.csv  inter_arrival_32.csv  inter_arrival_34.csv  inter_arrival_36.csv  inter_arrival_38.csv  inter_arrival_40.csv
2000_random_result/: all_result_2000.csv  result_1.csv  result_128.csv  result_16.csv  result_256.csv  result_32.csv  result_4.csv  result_64.csv
200_random_data/: inter_arrival_20.csv  inter_arrival_22.csv  inter_arrival_24.csv  inter_arrival_26.csv  inter_arrival_28.csv  inter_arrival_30.csv  inter_arrival_32.csv  inter_arrival_34.csv  inter_arrival_36.csv  inter_arrival_38.csv  inter_arrival_40.csv
200_random_result/: all_result_200.csv  result_1.csv  (+6 more)
Cpp_Optimization/algorithms/BAL/: BAL.cpp  CMakeLists.txt
Cpp_Optimization/algorithms/Dynamic/: CMakeLists.txt  Dynamic.cpp  Dynamic.cpp.backup
Cpp_Optimization/algorithms/Dynamic_BAL/: CMakeLists.txt  Dynamic_BAL.cpp
Cpp_Optimization/algorithms/RFDynamic/: CMakeLists.txt  RFDynamic.cpp  RFDynamic.cpp.backup
Cpp_Optimization/algorithms/SRPT/: CMakeLists.txt  SRPT.cpp
(+14925 files in other folders)
